# JobPilot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: companies.csv  companies_jobs.json  resume_template.example.tex  resume_template.tex
examples/: companies_ranked.json  jobs.sample.csv  jobs.sample.json  sample_resume.txt
src/jobpilot/: __init__.py  ats_fetchers.py  company_scraper.py  cover_letter.py  db_models.py  db_repository.py  embeddings.py  etl.py  jd_parser.py  job_imports.py  job_normalize.py  job_search_agent.py  job_store.py  llm_parser.py  main.py  ollama_polisher.py  pdf_generator.py  qdrant_ingest.py  qdrant_setup.py  ranking.py  resume_tailor.py  scoring.py  scoring_agent.py
src/jobpilot/agents/: interview_agent.py  report_agent.py
src/jobpilot/candidate_model/: model.py  updater.py
src/jobpilot/dashboard/: app.py  pages_controls.py  pages_interview.py  pages_job_tracker.py  pages_report.py  pages_settings.py  pages_skill_heatmap.py
src/jobpilot/pipeline/: graph.py
src/jobpilot/scheduler/: cron.py
src/jobpilot/tests/: __init__.py  test_company_scraper.py  test_cover_letter.py  test_resume_tailor.py  test_scoring_agent.py  test_w4.py  test_w5.py  test_w6.py
