[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpilot"
version = "0.7.0"
description = "Autonomous career agent - resume tailoring, interview prep, job scoring"
authors = [{name = "Atharva Hirulkar", email = "atharva.21911090@viit.ac.in"}]
requires-python = ">=3.11"
dependencies = [
    "PyPDF2>=3.0.0",
    "spacy>=3.5.0",
    "qdrant-client>=1.6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.0.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.0",
    "torch>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "playwright>=1.40.0",
    "google-search-results>=2.4.0",
    "weasyprint>=60.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "APScheduler>=3.10.0",
    "streamlit>=1.28.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
